--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <h1>C. STANDARD</h1>
-  <p>Let's get started here!</p>
+  <p>Let's get started here! Hopefully! </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
